# hexlet-pytest

./: README.md  pyproject.toml
tests/: test_stack.py
