[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["slavanr45 <slava.r45@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_pytest"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
